# hist-volatility-api

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  state.rs
src/background/: mod.rs  volatility_cache.rs
src/errors/: api_error.rs
src/extractors/: mod.rs  query_extractor.rs
src/routes/: health_check.rs  historical_volatility.rs  mod.rs
src/utils/: custom_date_serde.rs  mod.rs
tests/health_check/: main.rs
tests/historical_volatility/: main.rs
