[package]
name = "historical_volatility_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }