[package]
name = "historical_volatility_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
dotenvy = "0.15.7"
once_cell = "1.21.3"
envy = "0.4.2"
wiremock = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
